--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -266,3 +266,31 @@ button:focus-visible {
     @apply bg-background text-foreground font-raleway;
   }
 }
+
+@layer utilities{
+  /* dashboard form inputs */
+  .form-input-custom {
+    @apply bg-white border !border-neutral-300 !rounded-[4px] text-base text-neutral-950;
+  }
+  .form-label-custom{
+    @apply gap-0.5 text-sm font-semibold text-neutral-950
+  }
+
+  /* Buttons */
+  .btn-primary{
+    @apply bg-brand-800 !outline-none hover:bg-brand-700 focus:bg-brand-800 focus:border-2 focus:border-brand-200
+  }
+  .btn-secondary{
+    @apply bg-white !outline-none border border-neutral-300 text-neutral-950 font-semibold hover:!bg-neutral-50 hover:!border-neutral-300 focus:border-neutral-200 
+  }
+  .btn-tertiary{
+    @apply bg-white !outline-none !border-none text-neutral-950 font-semibold hover:bg-neutral-100 hover:!border-none focus:border-2 border-neutral-200 
+  }
+  .btn-destructive{
+    @apply bg-error-600 !outline-none !border-none text-white hover:bg-error-500 hover:!border-none focus:bg-error-600 focus:border-2 focus:border-error-200
+  }
+
+  /* Link */
+
+
+}
