fix: fixed input dark styling & autofill status

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -250,6 +250,14 @@ button:hover {
   body {
     @apply bg-background text-foreground font-raleway;
   }
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  input:-webkit-autofill:active {
+    box-shadow: 0 0 0px 1000px white inset !important;
+    -webkit-text-fill-color: black !important;
+    transition: background-color 9999s ease-in-out 0s;
+  }
 }
 
 @layer utilities {
