--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -271,16 +271,16 @@ button:hover {
 
   /* Buttons */
   .btn-primary {
-    @apply bg-brand-800 !outline-none hover:bg-brand-700 hover:cursor-pointer focus:bg-brand-800 focus:border-2 focus:border-brand-200;
+    @apply h-10 bg-brand-800 !outline-none hover:bg-brand-700 font-medium hover:cursor-pointer focus:bg-brand-800 focus:border-2 focus:border-brand-200;
   }
   .btn-secondary {
-    @apply bg-white border !border-neutral-300 text-neutral-950 font-semibold hover:!bg-neutral-50 hover:!border-neutral-300 hover:!outline-none hover:cursor-pointer focus:border-neutral-200;
+    @apply h-10 bg-white border !border-neutral-300 text-neutral-950 font-medium hover:!bg-neutral-50 hover:!border-neutral-300 hover:!outline-none hover:cursor-pointer focus:border-neutral-200;
   }
   .btn-tertiary {
-    @apply bg-white !outline-none !border-none text-neutral-950 font-semibold hover:bg-neutral-100 hover:!border-none hover:cursor-pointer focus:border-2 border-neutral-200;
+    @apply h-10 bg-white !outline-none !border-none text-neutral-950 font-medium hover:bg-neutral-100 hover:!border-none hover:cursor-pointer focus:border-2 border-neutral-200;
   }
   .btn-destructive {
-    @apply bg-error-600 !outline-none !border-none text-white hover:bg-error-500 hover:!border-none hover:cursor-pointer focus:bg-error-600 focus:border-2 focus:border-error-200;
+    @apply h-10 bg-error-600 !outline-none !border-none text-white hover:bg-error-500 hover:!border-none hover:cursor-pointer focus:bg-error-600 focus:border-2 focus:border-error-200;
   }
 
   /* Link */
